Fixed issue with Non Divi built pages bleeding into footer

--- a/assets/scss/wp/wp.scss
+++ b/assets/scss/wp/wp.scss
@@ -39,11 +39,6 @@
 	display: none;
 }
 
-#non_divi_sidebar{
-	float: left;
-	width: 25%;
-}
-
 #non_divi_sidebar #sidebar{
 	padding: 28px 0px ;
 	width: 100%;
